--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<figure>
+			<img src="https://www.thesprucepets.com/thmb/BdxJ2rJwBq63fCX__v-vfASRci8=/1080x0/filters:no_upscale():strip_icc()/31170124_355309831644176_4994517524629422080_n-5b3a4d0ec9e77c003771e6a6.jpg" 
+				alt="Favourite Animal">
+			<figcaption>Favourite Animal</figcaption>
+		</figure>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
